workspace = { members = ["derive"] }
[package]
name = "appkit"
version = "0.1.0"
authors = ["S.Percentage <Syn.Tri.Naga@gmail.com>"]
edition = "2021"

[dependencies]
objc = "0.2"
libc = "0.2"
bitflags = "1.0"
objc-ext = { git = "https://github.com/Pctg-x8/objc-ext" }
appkit-rs-derive = { path = "./derive" }
